[metadata]
name = ads-b
version = file: adsb/version.txt
author = Matt Hostetter
author_email = matthostetter@gmail.com
url = https://github.com/mhostetter/ads-b
description = A python 3 library for encoding/decoding ADS-B messages
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords =
    ads-b, adsb, automatic, dependent, surveillance, broadcast
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/mhostetter/ads-b
    Issue Tracker = https://github.com/mhostetter/ads-b/issues
    Documentation = https://ads-b.readthedocs.io/en/stable/

[options]
packages = adsb
include_package_data = true
test_suite = tests
python_requires = >=3.6
# install_requires =
#     numpy>=1.17.3  # v1.13 needed for __array_ufunc__ in np.ndarray, v1.17.3 is needed for wheels for Python 3.8

[options.package_data]
adsb = *.txt

[bdist_wheel]
universal = 0

[pylint]
disable =
    missing-module-docstring,
    missing-function-docstring,
    line-too-long,
    too-many-lines,
    bad-whitespace,
    invalid-name,
    no-else-return,
    fixme,
    too-many-arguments,
    too-many-locals,
    too-many-instance-attributes,
    too-many-ancestors,
    consider-using-enumerate,
    unneeded-not,
    global-statement,
    invalid-unary-operand-type,
    not-callable,  # pylint doesn't understand metaclass properties
    unsubscriptable-object,  # pylint doesn't understand metaclass properties
    comparison-with-callable,  # pylint doesn't understand metaclass properties
    eval-used,
min-similarity-lines = 100

[tool:pytest]
# markers =
#     GF2: Tests run over the GF(2) field
# addopts = -v
testpaths = tests
